--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-datepicker": "^1.7.2",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.1",
+    "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
     "@types/react": "^16.8.19",
