--- a/app.json
+++ b/app.json
@@ -27,6 +27,6 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.vladkorn.subexpress"
     },
-    "description": "123"
+    "description": ""
   }
 }
