--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-image-slider": "^2.0.3",
+    "react-native-looped-carousel": "^0.1.13",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-swiper": "^1.5.14",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "react-navigation-transitions": "^1.0.12"
