--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-image-slider": "^2.0.3",
     "react-native-looped-carousel": "^0.1.13",
+    "react-native-modals": "^0.19.7",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-swiper": "^1.5.14",
     "react-native-web": "^0.11.4",
