--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       "bundleIdentifier": "com.vladkorn.subexpress"
     },
     "android": {
-      "package": "com.vladkorn.subexpress"
+      "package": "com.vladkorn.subexpress",
+      "permissions": []
     },
     "description": ""
   }
