--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-highlight-words": "^1.0.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-modals": "^0.19.7",
