--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native-image-slider": "^2.0.3",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-modals": "^0.19.7",
+    "react-native-progress": "^3.6.0",
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-snap-carousel": "^3.8.0",
+    "react-native-spinkit": "^1.4.1",
     "react-native-swiper": "^1.5.14",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.5",
