--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
-    "expo": "^34.0.1",
-    "expo-blur": "^6.0.0",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "expo": "^36.0.0",
+    "expo-blur": "~8.0.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-highlight-words": "^1.0.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-modals": "^0.19.7",
-    "react-native-progress": "^3.6.0",
-    "react-native-reanimated": "~1.1.0",
-    "react-native-screens": "1.0.0-alpha.22",
+    "react-native-progress": "^4.0.3",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-spinkit": "^1.4.1",
     "react-native-swiper": "^1.5.14",
-    "react-native-web": "^0.11.4",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.5",
     "react-navigation-drawer": "^2.2.1",
     "react-navigation-stack": "^1.7.3",
     "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
-    "@types/react": "^16.8.19",
-    "@types/react-native": "^0.57.60",
-    "babel-preset-expo": "^5.1.1",
-    "typescript": "^3.4.5"
+    "@types/react": "^16.9.0",
+    "@types/react-native": "^0.60.15",
+    "babel-preset-expo": "^8.0.0",
+    "typescript": "^3.7.2"
   },
   "private": true
 }
