--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-spinkit": "^1.4.1",
-    "react-native-swiper": "^1.5.14",
+    "react-native-swiper": "^1.6.0-nightly.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
