--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "^1.6.0",
     "react-native-highlight-words": "^1.0.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-looped-carousel": "^0.1.13",
@@ -27,8 +27,8 @@
     "react-native-spinkit": "^1.4.1",
     "react-native-swiper": "^1.6.0-nightly.5",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.3",
+    "react-navigation": "^4.2.2",
+    "react-navigation-drawer": "^2.4.2",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-transitions": "^1.0.12"
   },
