--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "subexpress",
-    "slug": "subexpress",
+    "name": "Subexpress",
+    "slug": "Subexpress",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -9,7 +9,7 @@
       "android",
       "web"
     ],
-    "version": "1.0.6",
+    "version": "1.0.7",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -31,7 +31,7 @@
       "package": "com.vladkorn.subexpress",
       "googleServicesFile": "./google-services.json",
       "permissions": [],
-      "versionCode": 16
+      "versionCode": 17
     },
     "description": ""
   }
