--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "expo": "^36.0.0",
-    "expo-blur": "~8.0.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-datepicker": "^1.7.2",
-    "react-native-gesture-handler": "^1.6.0",
-    "react-native-highlight-words": "^1.0.1",
-    "react-native-image-slider": "^2.0.3",
-    "react-native-looped-carousel": "^0.1.13",
-    "react-native-modals": "^0.19.9",
-    "react-native-progress": "^4.0.3",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-snap-carousel": "^3.8.4",
-    "react-native-spinkit": "^1.4.1",
-    "react-native-swiper": "^1.6.0-nightly.5",
-    "react-native-web": "^0.11.7",
-    "react-navigation": "^4.2.2",
-    "react-navigation-drawer": "^2.4.2",
-    "react-navigation-stack": "^1.10.3",
-    "react-navigation-transitions": "^1.0.12"
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.0",
-    "@types/react-native": "^0.60.15",
-    "babel-preset-expo": "^8.0.0",
-    "typescript": "^3.7.2"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"crypto-js": "^3.1.9-1",
+		"expo": "^44.0.0",
+		"expo-blur": "~11.0.0",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-native": "0.64.3",
+		"react-native-datepicker": "^1.7.2",
+		"react-native-gesture-handler": "~2.1.0",
+		"react-native-highlight-words": "^1.0.1",
+		"react-native-image-slider": "^2.0.3",
+		"react-native-looped-carousel": "^0.1.13",
+		"react-native-modals": "^0.19.9",
+		"react-native-progress": "^4.0.3",
+		"react-native-reanimated": "~2.3.1",
+		"react-native-screens": "~3.10.1",
+		"react-native-snap-carousel": "^3.8.4",
+		"react-native-spinkit": "^1.4.1",
+		"react-native-swiper": "^1.6.0-nightly.5",
+		"react-native-web": "0.17.1",
+		"react-navigation": "^4.2.2",
+		"react-navigation-drawer": "^2.4.2",
+		"react-navigation-stack": "^1.10.3",
+		"react-navigation-transitions": "^1.0.12"
+	},
+	"devDependencies": {
+		"@types/react": "~17.0.21",
+		"@types/react-native": "~0.64.12",
+		"babel-preset-expo": "9.0.1",
+		"typescript": "~4.3.5"
+	},
+	"private": true
 }
