--- a/app.json
+++ b/app.json
@@ -1,37 +1,32 @@
 {
-  "expo": {
-    "name": "Subexpress",
-    "slug": "Subexpress",
-    "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.7",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash_c.png",
-      "resizeMode": "cover",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": false,
-      "bundleIdentifier": "com.vladkorn.subexpress"
-    },
-    "android": {
-      "package": "com.vladkorn.subexpress",
-      "googleServicesFile": "./google-services.json",
-      "permissions": [],
-      "versionCode": 17
-    },
-    "description": ""
-  }
+	"expo": {
+		"name": "Subexpress",
+		"slug": "Subexpress",
+		"privacy": "public",
+		"platforms": ["ios", "android", "web"],
+		"version": "1.0.9",
+		"orientation": "portrait",
+		"icon": "./assets/icon.png",
+		"splash": {
+			"image": "./assets/splash_c.png",
+			"resizeMode": "cover",
+			"backgroundColor": "#ffffff"
+		},
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"supportsTablet": false,
+			"bundleIdentifier": "com.vladkorn.subexpress",
+			"buildNumber": "1.0.9"
+		},
+		"android": {
+			"package": "com.vladkorn.subexpress",
+			"googleServicesFile": "./google-services.json",
+			"permissions": [],
+			"versionCode": 18
+		},
+		"description": ""
+	}
 }
