--- a/package.json
+++ b/package.json
@@ -1,42 +1,54 @@
 {
-	"main": "node_modules/expo/AppEntry.js",
 	"scripts": {
 		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
 		"web": "expo start --web",
 		"eject": "expo eject"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "~1.17.3",
+		"@react-navigation/drawer": "^6.4.1",
+		"@react-navigation/native": "^6.0.10",
+		"@react-navigation/native-stack": "^6.6.2",
 		"crypto-js": "^3.1.9-1",
-		"expo": "^44.0.0",
-		"expo-blur": "~11.0.0",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"react-native": "0.64.3",
+		"expo": "^45.0.0",
+		"expo-blur": "~11.1.0",
+		"expo-splash-screen": "~0.15.1",
+		"expo-status-bar": "~1.3.0",
+		"expo-updates": "~0.13.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-native": "0.68.2",
+		"react-native-date-picker": "^4.2.2",
 		"react-native-datepicker": "^1.7.2",
-		"react-native-gesture-handler": "~2.1.0",
+		"react-native-gesture-handler": "~2.2.1",
 		"react-native-highlight-words": "^1.0.1",
 		"react-native-image-slider": "^2.0.3",
 		"react-native-looped-carousel": "^0.1.13",
 		"react-native-modals": "^0.19.9",
 		"react-native-progress": "^4.0.3",
-		"react-native-reanimated": "~2.3.1",
-		"react-native-screens": "~3.10.1",
+		"react-native-reanimated": "^2.8.0",
+		"react-native-safe-area-context": "^4.3.1",
+		"react-native-screens": "^3.13.1",
 		"react-native-snap-carousel": "^3.8.4",
 		"react-native-spinkit": "^1.4.1",
 		"react-native-swiper": "^1.6.0-nightly.5",
-		"react-native-web": "0.17.1",
+		"react-native-web": "0.17.7",
 		"react-navigation": "^4.2.2",
 		"react-navigation-drawer": "^2.4.2",
 		"react-navigation-stack": "^1.10.3",
 		"react-navigation-transitions": "^1.0.12"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@types/crypto-js": "^4.1.1",
 		"@types/react": "~17.0.21",
-		"@types/react-native": "~0.64.12",
-		"babel-preset-expo": "9.0.1",
+		"@types/react-native": "~0.67.6",
+		"babel-preset-expo": "~9.1.0",
 		"typescript": "~4.3.5"
 	},
-	"private": true
+	"privacy": "public",
+	"name": "subexpress",
+	"version": "1.0.9"
 }
