--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "~1.17.3",
+		"@react-native-community/datetimepicker": "6.1.2",
 		"@react-navigation/drawer": "^6.4.1",
 		"@react-navigation/native": "^6.0.10",
 		"@react-navigation/native-stack": "^6.6.2",
@@ -20,24 +21,18 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-native": "0.68.2",
-		"react-native-date-picker": "^4.2.2",
-		"react-native-datepicker": "^1.7.2",
 		"react-native-gesture-handler": "~2.2.1",
 		"react-native-highlight-words": "^1.0.1",
 		"react-native-image-slider": "^2.0.3",
-		"react-native-looped-carousel": "^0.1.13",
+		"react-native-modal-datetime-picker": "^13.1.2",
 		"react-native-modals": "^0.19.9",
 		"react-native-progress": "^4.0.3",
 		"react-native-reanimated": "^2.8.0",
-		"react-native-safe-area-context": "^4.3.1",
-		"react-native-screens": "^3.13.1",
-		"react-native-snap-carousel": "^3.8.4",
-		"react-native-spinkit": "^1.4.1",
+		"react-native-safe-area-context": "4.2.4",
+		"react-native-screens": "~3.11.1",
 		"react-native-swiper": "^1.6.0-nightly.5",
 		"react-native-web": "0.17.7",
 		"react-navigation": "^4.2.2",
-		"react-navigation-drawer": "^2.4.2",
-		"react-navigation-stack": "^1.10.3",
 		"react-navigation-transitions": "^1.0.12"
 	},
 	"devDependencies": {
@@ -50,5 +45,5 @@
 	},
 	"privacy": "public",
 	"name": "subexpress",
-	"version": "1.0.9"
+	"version": "1.1.0"
 }
