--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"expo-blur": "~11.1.0",
 		"expo-splash-screen": "~0.15.1",
 		"expo-status-bar": "~1.3.0",
-		"expo-updates": "~0.13.2",
+		"expo-updates": "~0.13.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-native": "0.68.2",
@@ -27,7 +27,7 @@
 		"react-native-modal-datetime-picker": "^13.1.2",
 		"react-native-modals": "^0.19.9",
 		"react-native-progress": "^4.0.3",
-		"react-native-reanimated": "^2.8.0",
+		"react-native-reanimated": "~2.8.0",
 		"react-native-safe-area-context": "4.2.4",
 		"react-native-screens": "~3.11.1",
 		"react-native-swiper": "^1.6.0-nightly.5",
@@ -45,5 +45,5 @@
 	},
 	"privacy": "public",
 	"name": "subexpress",
-	"version": "1.1.0"
+	"version": "1.1.2"
 }
