--- a/package.json
+++ b/package.json
@@ -8,39 +8,43 @@
 	},
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "~1.17.3",
+		"@react-native-community/datetimepicker": "6.2.0",
 		"@react-navigation/drawer": "^6.4.1",
 		"@react-navigation/native": "^6.0.10",
 		"@react-navigation/native-stack": "^6.6.2",
 		"crypto-js": "^3.1.9-1",
-		"expo": "^45.0.0",
-		"expo-blur": "~11.1.0",
-		"expo-splash-screen": "~0.15.1",
-		"expo-status-bar": "~1.3.0",
-		"expo-updates": "~0.13.3",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
-		"react-native": "0.68.2",
-		"react-native-gesture-handler": "~2.2.1",
+		"expo": "^46.0.0",
+		"expo-blur": "~11.2.0",
+		"expo-splash-screen": "~0.16.1",
+		"expo-status-bar": "~1.4.0",
+		"expo-updates": "~0.14.4",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"react-native": "0.69.4",
+		"react-native-gesture-handler": "~2.5.0",
 		"react-native-highlight-words": "^1.0.1",
 		"react-native-modal-datetime-picker": "^13.1.2",
 		"react-native-modals": "^0.19.9",
-		"react-native-reanimated": "~2.8.0",
-		"react-native-safe-area-context": "4.2.4",
-		"react-native-screens": "~3.11.1",
+		"react-native-reanimated": "~2.9.1",
+		"react-native-safe-area-context": "4.3.1",
+		"react-native-screens": "~3.15.0",
 		"react-native-swiper": "^1.6.0-nightly.5",
-		"react-native-web": "0.17.7",
+		"react-native-web": "~0.18.7",
 		"react-navigation": "^4.2.2",
-		"react-navigation-transitions": "^1.0.12"
+		"react-navigation-transitions": "^1.0.12",
+		"rn-swipeable-panel": "^1.2.7"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.9",
+		"@babel/core": "^7.18.6",
 		"@types/crypto-js": "^4.1.1",
-		"@types/react": "~17.0.21",
-		"@types/react-native": "~0.67.6",
-		"babel-preset-expo": "~9.1.0",
-		"typescript": "~4.3.5"
+		"@types/react": "~18.0.0",
+		"@types/react-native": "~0.69.1",
+		"babel-plugin-module-resolver": "^4.1.0",
+		"babel-preset-expo": "~9.2.0",
+		"deprecated-react-native-prop-types": "^2.3.0",
+		"typescript": "^4.6.3"
 	},
 	"privacy": "public",
 	"name": "subexpress",
-	"version": "1.1.8"
+	"version": "2.0.0"
 }
